FlightPath 4.x Changelog
========================


----------------
RELEASED 4.4.4.1
----------------


2014-04-03
  Fixed a bug where courses with decimal hours were gettng un-advised upon save.  This is due
  to decimal points not being allowed in hidden variable names in HTML.  So, they now get
  replaced before saving with placeholder text, then turned back into decimals after
  submission.
  
  Tweaked a few places where hours are displayed to *1, so excess zeroes after the decimal are
  trimmed off.


----------------
RELEASED 4.4.4
----------------


2014-03-31
  Added changes to admin.module and system.install, so that certain system values are setup
  by default.  This was causing a bug, if they weren't set, which on some systems created
  a run-away loop.
  

2014-03-27
  Fixed a small typo, and fixed a bug in _FlightPath.php.  Made it so that courses
  worth zero hours may be repeated infinitely.  The bug, otherwise, was to not allow
  repeated attempts, which doesn't make sense, given the math.


----------------
RELEASED 4.4.3
----------------


2014-03-25
  Fixed minor bug with Course, where a course's catalog hours showed extra zeros after
  the decimal.
  
  Removed explanation text for 'quick term reference' on admin page, it was hard-coded
  using old values, and was confusing.  Added extra explanation text to clarify.
  
  Added a setting for not auto-capitalizing institution names of transfer credits.
  Added a setting for minimum substitutable grade (instead of hard-coding "D")
  
  Added a setting & code for controlling whether zero-hour courses can be subbed
  for non-zero hour courses.  By default, this is set to not allow that; you can only
  sub zero-hour courses for other zero-hour courses.  Internally, those courses have 1
  "ghost" hour, due to limitations in the mathematics of FlightPath, true 0-hour courses
  can't be allowed.
  
  Corrected hard-coded URL for a reference to a help page which doesn't exist, for outdated
  subs.

